hw 06 part 3